--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.pivotal</groupId>
-  <artifactId>hawq-plugin</artifactId>
-  <version>1.3.0</version>
-  <name>hawq-plugin</name>
+  <artifactId>gpdb-plugin</artifactId>
+  <version>0.1.0</version>
+  <name>gpdb-plugin</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -30,7 +30,7 @@
         <configuration>
           <copyright>2012-2015, Pivotal Software, Inc.</copyright>
           <group>io.pivotal</group>
-          <description>Hawq plugin contains Ambari's stack definition for Hawq service. When installed, Ambari should be able to support even Hawq as a service.</description>
+          <description>GPDB plugin contains Ambari's stack definition for GPDB service. When installed, Ambari should be able to support even GPDB as a service.</description>
           <release>${release}</release>
           <requires>
             <require>ambari-server &gt;= 1.7</require>
